[gd_scene load_steps=13 format=3 uid="uid://ct0hclkx0o8kc"]

[ext_resource type="Script" uid="uid://mekrbrac0ty5" path="res://Scripts/Enemies/enemie_2.gd" id="1_1vcbv"]
[ext_resource type="Texture2D" uid="uid://c4pmu8cmx5lvb" path="res://Assets/art/sprites/Enemigos/DukaLIEN_1.png" id="1_4gxqd"]
[ext_resource type="Texture2D" uid="uid://bkwhr777vossm" path="res://Assets/art/sprites/Particulas/explosion_1.png" id="3_tv63o"]
[ext_resource type="Texture2D" uid="uid://duyl7dquawm65" path="res://Assets/art/sprites/Particulas/explosion_2.png" id="4_17ykr"]
[ext_resource type="Texture2D" uid="uid://cxclutw0k851d" path="res://Assets/art/sprites/Particulas/explosion_3.png" id="5_8tilq"]
[ext_resource type="Texture2D" uid="uid://cn7o86lwnw2ru" path="res://Assets/art/sprites/Particulas/explosion_4.png" id="6_sps58"]
[ext_resource type="Texture2D" uid="uid://bresepnf51cdy" path="res://Assets/art/sprites/Particulas/explosion_5.png" id="7_feexy"]
[ext_resource type="Texture2D" uid="uid://cwnl465sbrvj3" path="res://Assets/art/sprites/Particulas/explosion_6.png" id="8_1j27o"]
[ext_resource type="AudioStream" uid="uid://cmp0uxkr0orbl" path="res://Assets/sfx/506326__thevoicesgames__retro-explosion-1.wav" id="9_17ykr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ajxft"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_4gxqd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_tv63o")
}, {
"duration": 1.0,
"texture": ExtResource("4_17ykr")
}, {
"duration": 1.0,
"texture": ExtResource("5_8tilq")
}, {
"duration": 1.0,
"texture": ExtResource("6_sps58")
}, {
"duration": 1.0,
"texture": ExtResource("7_feexy")
}, {
"duration": 1.0,
"texture": ExtResource("8_1j27o")
}],
"loop": true,
"name": &"explosion",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1vcbv"]
radius = 15.0
height = 44.0

[sub_resource type="CircleShape2D" id="CircleShape2D_htokm"]
radius = 25.02

[node name="enemie_2" type="CharacterBody2D" groups=["enemy_2"]]
script = ExtResource("1_1vcbv")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_ajxft")
frame_progress = 0.170869
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_1vcbv")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_htokm")

[node name="Label" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = -23.0
offset_top = -67.0
offset_right = 17.0
offset_bottom = -44.0
text = "0"
horizontal_alignment = 1

[node name="ProgressBar_enemy_2" type="ProgressBar" parent="."]
visible = false
offset_left = -34.0
offset_top = -56.0
offset_right = 32.0
offset_bottom = -45.0
value = 100.0
show_percentage = false

[node name="explosion_timer" type="Timer" parent="."]

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_17ykr")
volume_db = 10.0

[node name="Punch_timer" type="Timer" parent="."]

[connection signal="animation_finished" from="Sprite2D" to="." method="_on_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="explosion_timer" to="." method="_on_explosion_timer_timeout"]
[connection signal="timeout" from="Punch_timer" to="." method="_on_punch_timer_timeout"]
